# lmi

./: .coverage  .env.example  .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
.cursor/rules/py-rules/: python-coding-conventions.mdc  python-project-structure-agent.mdc  python-testing-conventions.mdc  python-uv-dependency-management-agent.mdc
.cursor/rules/tool-rules/: git-commit-push-agent.mdc
docs/: advanced-usage.md  authentication.md  command-reference.md  configuration.md  development-guide.md  error-handling.md  faq.md  index.md  logging-output.md  plugin-system.md  quickstart.md  reference.md  roadmap.md
docs/development/: implementation_plan.md  prd.md  prompt.md
docs/development/specs/: _index.md  spec-auth.md  spec-config.md  spec-core.md  spec-logging.md  spec-plugins.md  spec-sso-login.md  spec-testing.md
src/lmi/: __init__.py  __main__.py  auth.py  config.py  logging.py  plugins.py  sso.py
src/lmi/cli/: auth.py
tests/: test_auth.py  test_auth_new.py  test_cli.py  test_config.py  test_plugin.py  test_sso.py
